# Investment

./: .env.example  .gitattributes  .gitignore  Automated Investment Playbook.md  For next chat.md  HANDOVER.md  MANIFEST.json  PROJECT_STATE.md  README.md  pyproject.toml
00_runbook/: extraction_process.md
03_extract/: indicators.jsonl  process.jsonl  rules.jsonl
04_playbook/modules/: DRAW_DOWN_AND_RECOVERY_GOVERNOR.md  EXECUTION_LIQUIDITY_FILTERS.md  EXPECTANCY_CRV.md  MARKET_CONDITIONS.md  SENTIMENT_POSITIONING.md  TECH_MOVING_AVERAGES.md  TECH_OSCILLATORS.md  TECH_VOLUME_CONFIRMATION.md  TRAILING_STOP_POLICIES.md  TREND_BREAKS_TRANSITIONS.md
05_blueprint/: 00_MASTER_PLAN.md  01_DECISION_ANALYSIS.md  02_PHASE1_WORKPLAN.md
05_blueprint/meso/: C1_registry_warehouse.md  C2_ingestion_connectors.md  C3_transform_scoring.md  C4_regime_aggregation.md  C5_playbook_integration.md  C6_snapshot_ai_layer.md  (+3 more)
configs/: ai.yaml  calendar.yaml  contradictions.yaml  modules.yaml  registry.yaml  scoring_defaults.yaml  weights.yaml
ipos/: backfill.py  cli.py  econ_calendar.py  golden.py  run.py
logs/: QA_REPORT.md  chat_json_blocks.jsonl  chat_transcript.md
prompts/: weekly_checkup.md
scripts/: backfill_seed.py  qa_chat_vs_repo.py  qa_repo.py  seed_registry_from_extract.py  update_golden.py
tests/: conftest.py  test_ai.py  test_calendar.py  test_config.py  test_connectors.py  test_contradictions.py  test_etl.py  test_failsafe.py  test_golden.py  test_ohlc_regime.py  test_regime.py  test_report_html.py  test_scoring.py  test_snapshot.py  test_warehouse.py
(+33 files in other folders)
